2012-11-29  Eric Botcazou  <ebotcazou@adacore.com>

	PR middle-end/55321
	* calls.c (emit_library_call_value_1): Mark as no-nonlocal if no-throw.

2012-11-29  Vladimir Makarov  <vmakarov@redhat.com>

	PR middle-end/55456
	* lra-int.h (lra_new_regno_start): New external.
	* lra.c (lra_new_regno_start): New global.
	(lra): Set up lra_new_regno_start.
	* lra-constraints.c (match_reload): Sync values only for original
	pseudos.

2012-11-29 Kai Tietz  <ktietz@redhat.com>

	PR target/53912
	* prefix.c (lookup_key): Replace xmalloc/xrealloc
	use by XNEWVEC/XRESIZEVEC.

2012-11-29  Richard Earnshaw  <rearnsha@arm.com>

	PR target/55073
	* arm/neon.md (neon_vtrn<mode>_internal): Split into expand
	and insn patterns.  Re-order insn arguments to tie inputs to
	outputs.
	(neon_vzip<mode>_internal): Likewise.
	(neon_vuzp<mode>_internal): Likewise.

2012-11-29  Marc Glisse  <marc.glisse@inria.fr>

	PR c++/53094
	* fold-const.c (fold): Replace a CONSTRUCTOR with a VECTOR_CST.

2012-11-29  Richard Biener  <rguenther@suse.de>

	* tree-ssa-pre.c (get_expr_value_id): Do not add expr
	to the set of value expressions here.
	(add_to_exp_gen, make_values_for_phi): Fold into ...
	(compute_avail): ... here, and avoid useless work.  Dump
	avail sets in processing order.
	(do_pre): Do not dump avail sets here.

2012-11-29  Matthew Gretton-Dann  <matthew.gretton-dann@linaro.org>

	PR target/54974
	* config/arm/arm.md (thumb2_pool_range, pool_range): Add comment on
	Thumb pool ranges.
	(thumb1_extendhisi2): Reduce Thumb pool range.
	(arm_movdi): Likewise.
	(thumb1_movdi_insn): Likewise.
	(thumb1_movsi_insn): Likewise.
	(pic_load_addr_unified): Likewise.
	(pic_load_addr_32bit): Likewise.
	(pic_load_addr_thumb1): Likewise.
	(thumb1_movhf): Likewise.
	(arm_movsf_soft_insn): Likewise.
	(thumb1_movsf_soft_insn): Likewise.
	(movdf_soft_insn): Likewise.
	(thumb1_movdf_soft_insn): Likewise.
	* config/arm/neon.md (*neon_mov<mode>): Likewise.
	(*neon_mov<mode>): Likwise.